fix mobile screen overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,8 @@
   @apply md:float-left md:mr-5 md:mt-0 md:max-w-[50%];
 }
 
-.math-display {
-  @apply clear-both max-w-0;
+.math-display > .katex-display > .katex {
+  @apply clear-both overflow-x-scroll whitespace-normal text-left;
 }
 
 .col-list {
@@ -26,11 +26,11 @@
 }
 
 .heading-link {
-  @apply no-underline font-inherit relative;
+  @apply relative font-inherit no-underline;
 }
 
 .heading-link::before {
-  @apply inline-block absolute left-[-1.9rem] px-[0.4rem] py-[0.1rem] w-[2rem] h-[1.6rem] opacity-0 content-icon-link;
+  @apply absolute left-[-1.9rem] inline-block h-[1.6rem] w-[2rem] px-[0.4rem] py-[0.1rem] opacity-0 content-icon-link;
 }
 
 .heading-link:hover::before {
